--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.vs/
+Debug/
+tools/Debug/
+*.opendb
+*.db
 # git-ls-files --others --exclude-from=.git/info/exclude
 # Lines that start with '#' are comments.
 # For a project mostly in C, the following would be a good set of
@@ -37,3 +42,14 @@ docs/html
 libusbmuxd.pc
 tools/.libs/*
 tools/iproxy
+
+# MSVC
+*.opensdf
+*.sdf
+*.suo
+*.user
+*.filters
+packages/
+*.nupkg
+Win32/
+x64/
