Setup CI: * Add Travis build file * Add Debian packages * Support building Ubuntu packages * Build RPM package * Temporary fix for a NuGet/AppVeyor connectivity issue * Build for bionic, too * pip on Linux, pip2 on osx * Build for all LTS Ubuntu Versions * Support for older Ubuntu versions * Run with root privileges * Don't cross-compile for now * Remove temporary workaround * Add new symbols * Add new symbol

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,8 @@
+# Temporarly fix for an issue for NuGet/AppVeyor connectivity;
+# see appveyor.statuspage.io for more info. Should be removed when connectivty
+# is restored.
 before_build:
-  - nuget restore
+  - nuget restore -NonInteractive
 
 build_script:
   - msbuild libusbmuxd.sln /p:Configuration=Debug /p:Platform=Win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
