--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,24 +1,16 @@
-# Temporarly fix for an issue for NuGet/AppVeyor connectivity;
-# see appveyor.statuspage.io for more info. Should be removed when connectivty
-# is restored.
+environment:
+  VCPKG_ROOT: C:\tools\vcpkg-libimobiledevice
+
 before_build:
-  - nuget restore -NonInteractive
+  - vcpkg version
+  - git clone -q --depth 1 -b ports/libimobiledevice https://github.com/libimobiledevice-win32/vcpkg %VCPKG_ROOT%
+  - cmd: "%VCPKG_ROOT%\\bootstrap-vcpkg.bat"
+  - cmd: "%VCPKG_ROOT%\\vcpkg version"
+  - cmd: "%VCPKG_ROOT%\\vcpkg integrate install"
+  - cmd: "%VCPKG_ROOT%\\vcpkg install libplist"
 
 build_script:
   - msbuild libusbmuxd.sln /p:Configuration=Debug /p:Platform=Win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   - msbuild libusbmuxd.sln /p:Configuration=Debug /p:Platform=x64 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   - msbuild libusbmuxd.sln /p:Configuration=Release /p:Platform=Win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   - msbuild libusbmuxd.sln /p:Configuration=Release /p:Platform=x64 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-
-on_success:
-  - cmd: choco install wget
-  - cmd: wget http://coapp.org/files/CoApp.Tools.Powershell.msi
-  - cmd: start /wait msiexec /qb /i CoApp.Tools.Powershell.msi
-  - ps: .\CreateNuGetPackage.ps1 -Build $ENV:APPVEYOR_BUILD_NUMBER
-  - cmd: appveyor PushArtifact libusbmuxd.1.0.10.%APPVEYOR_BUILD_NUMBER%.nupkg
-  - cmd: appveyor PushArtifact libusbmuxd.symbols.1.0.10.%APPVEYOR_BUILD_NUMBER%.nupkg
-  - cmd: appveyor PushArtifact libusbmuxd.redist.1.0.10.%APPVEYOR_BUILD_NUMBER%.nupkg
-
-nuget:
-  project_feed: true
-  account_feed: true
