--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,6 +74,10 @@ jobs:
       brew install autoconf automake libtool pkg-config
     displayName: Install autotools
   - script: |
+      # Patch the pkg-config files. The path to the artifacts directory includes the version number of the
+      # VSTS agent, which may change.
+      LC_CTYPE=C LANG=C find $SYSTEM_ARTIFACTSDIRECTORY/libplist/$RID/lib/pkgconfig -name '*.pc' -print0 | xargs -0 sed -i -e "s@/Users/vsts/agent/[0-9]*\.[0-9]*\.[0-9]*/work/1/a/@$BUILD_ARTIFACTSTAGINGDIRECTORY/@g"
+
       export PKG_CONFIG_PATH="$SYSTEM_ARTIFACTSDIRECTORY/libplist/$RID/lib/pkgconfig:$PKG_CONFIG_PATH"
       ./autogen.sh --prefix=$BUILD_ARTIFACTSTAGINGDIRECTORY/libusbmuxd/$RID --host=$TARGET --enable-static=no --enable-shared=yes
       make
